--- a/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
+++ b/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
@@ -2,7 +2,8 @@
 
 .parallax {
     /* The image used */
-    background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+
+    background-image: linear-gradient(to right, white 50%, pink 50%, pink 70%, white 70%);
   
     /* Set a specific height */
     min-height: 500px;
@@ -12,6 +13,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .blob{
+    
   }
 
 
