--- a/src/Components/PhotoGallery/CurtainGallery.module.css
+++ b/src/Components/PhotoGallery/CurtainGallery.module.css
@@ -5,12 +5,11 @@
     z-index: 10;
     left: 0;
     top: 3rem;
-    /* From https://css.glass */
-background: rgba(255, 255, 255, 0.2);
+background: rgba(0, 0, 0, 0.5);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(10.2px);
--webkit-backdrop-filter: blur(10.2px);
+backdrop-filter: blur(5.4px);
+-webkit-backdrop-filter: blur(5.4px);
     transition: height 0.5s ease;
     overflow: auto;
   }
@@ -37,7 +36,7 @@ backdrop-filter: blur(10.2px);
     
     /* When you mouse over the navigation links, change their color */
     .overlay a:hover, .overlay a:focus {
-      color: #f1f1f1;
+      color: rgba(255, 0, 0, 0.5);
     }
     
     /* Position the close button (top right corner) */
@@ -46,6 +45,7 @@ backdrop-filter: blur(10.2px);
       top: 0px;
       right: 15px;
       font-size: 60px;
+      color: #f1f1f1;
     }
   
     .container {
@@ -61,6 +61,13 @@ backdrop-filter: blur(10.2px);
       margin-bottom: 20px;
       position: relative;
       overflow: hidden;
+    }
+
+    .categoryTitle{
+        text-align: center;
+        color: #f1f1f1;
+        margin-top: 2rem;
+        background-color: #000;
     }
   
     /* Extra kicsi készülékek (telefonok, 576px és alatt) */
