--- a/src/Components/AdminPage/DarkMode.module.css
+++ b/src/Components/AdminPage/DarkMode.module.css
@@ -2,12 +2,12 @@
   background-color: #181a1e;
   transition: background-color 0.5s ease, color 0.5s ease;
   color: #fff;
-  margin-top: 4rem;
+  margin-top: 3rem;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 30px 20px 0px 20px;
 }
 
 .uploadFile {
