--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -16,8 +16,9 @@
   transition: transform 0.3s ease-in-out; 
 }
 
-.headerVisible {
-  transform: translateY(0);
+
+.hidden {
+  background-color: rgb(165, 17, 17);
 }
 
 .headerHidden {
