--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -3,6 +3,25 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 5rem;
+  /*background: radial-gradient(circle, rgba(238,174,202,0.8715861344537815) 0%, rgba(148,187,233,0.8743872549019608) 100%);*/
+  
+  
+  color: #1f1e1d;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  opacity: 100%;
+  z-index: 20;
+  transition: height 0.6s ease-in-out; 
+}
+
+
+.hidden {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 3rem;
   /*background: radial-gradient(circle, rgba(238,174,202,0.8715861344537815) 0%, rgba(148,187,233,0.8743872549019608) 100%);*/
   background-color: white;
@@ -13,16 +32,7 @@
   align-items: center;
   opacity: 100%;
   z-index: 20;
-  transition: transform 0.3s ease-in-out; 
-}
-
-
-.hidden {
-  background-color: rgb(165, 17, 17);
-}
-
-.headerHidden {
-  transform: translateY(-100%);
+  transition: height 0.6s ease-in-out; 
 }
 
 
@@ -33,9 +43,17 @@
 }
 
 .mainTitle{
+  width: 35%;
+  height: auto;
+  margin-left: 2rem;
+  transition: width 0.6s ease-in-out; 
+}
+
+.mainTitleHidden{
   width: 30%;
   height: auto;
   margin-left: 2rem;
+  transition: width 0.6s ease-in-out; 
 }
 
 .burgerButton{
