--- a/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
+++ b/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
@@ -29,14 +29,6 @@
   z-index: 2;
 }
 
-.centeredTextTitle2 {
-  text-align: center;
-  color: #333;
-  font-size: 4rem;
-  font-weight: 400;
-  font-family: "Bebas Neue";
-}
-
 .fruitCake {
     max-width: 45%;
     height: auto;
@@ -45,11 +37,6 @@
     top: 60%;
     transform: translate(0, -50%);
     z-index: 1;
-}
-
-.mainTitle {
-  width: 50%;
-  height: auto;
 }
 
 .centeredTextTitle {
@@ -73,15 +60,6 @@
     background-color: rgba(33, 37, 40, 0.8);
 }
 
-.introductoryText {
-   
-    font-size: 1.7rem;
-    line-height: 1.6;
-    color: #ffffff;
-    margin: 0 100px;
-    font-family: 'Sorts Mill Goudy', serif;
-}
-
 .introductoryText2 {
  
   font-size: 1.3rem;
@@ -92,23 +70,64 @@
 }
 
 
-/* Responsive styles */
-@media only screen and (max-width: 400px) {
-    .introductoryText {
-        font-size: 1.2rem;
-        margin: 0 20px;
+/* Mobil eszközök (kis képernyő) */
+@media only screen and (max-width: 767px) {
+    .rectangle {
+        width: 100%;
+        height: 300px;
+        display: flex;
+        align-items: center;
+        position: absolute;
+        top: 60%;
+        transform: translate(0, -50%);
+        z-index: 2;
+    }
+    
+    .titleBox {
+      position: absolute;
+      left: 5%;
+      top: 20%;
+      transform: translate(0, -50%);
+      z-index: 2;
+    }
+    
+    .fruitCake {
+        max-width: 45%;
+        height: auto;
+        position: absolute;
+        right: 10%; /* Adjust as needed */
+        top: 50%;
+        transform: translate(0, -50%);
+        z-index: 1;
     }
     .centeredTextTitle {
-        font-size: 2.5rem;
+        text-align: center;
+        font-size: 3rem;
+        font-family: "Bebas Neue";
+        
     }
+    .introductoryText2 {
+ 
+        font-size: 1.1rem;
+        line-height: 1.6;
+        color: #141313;
+        font-family: 'Sorts Mill Goudy', serif;
+        padding: 0px 60px 0px 20px;
+      }
+      
 }
 
-@media only screen and (min-width: 401px) and (max-width: 767px) {
-    .introductoryText {
-        font-size: 1.4rem;
-        margin: 0 20px;
-    }
-    .centeredTextTitle {
-        font-size: 2.5rem;
-    }
+/* Tablet eszközök (közepes képernyő) */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
 }
+
+/* Kisebb asztali és laptop kijelzők */
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+
+}
+
+/* Nagyobb asztali kijelzők és TV-k */
+@media only screen and (min-width: 1200px) {
+}
+
