--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -95,7 +95,19 @@
 
 /* Mobil eszközök (kis képernyő) */
 @media only screen and (max-width: 767px) {
-
+  .mainTitle{
+    width: 60%;
+    height: auto;
+    margin-left: 2rem;
+    transition: width 0.6s ease-in-out; 
+  }
+  
+  .mainTitleHidden{
+    width: 50%;
+    height: auto;
+    margin-left: 2rem;
+    transition: width 0.6s ease-in-out; 
+  }
 }
 
 /* Tablet eszközök (közepes képernyő) */
