--- a/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
+++ b/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
@@ -130,19 +130,26 @@
         width: 100%;
         height: auto; /* Adjust height to auto for content flexibility */
         margin-top: 20px; /* Adjust margin for spacing */
-        top: 50%;
+        top: 40%;
     }
     
     .titleBox {
         margin-top: 20px; /* Adjust margin as needed */
         left: auto;
-        top: 15%;
+        top: 10%;
+
     }
+
+    .fruitCakeContainer {
+        display: flex;
+        justify-content: center; /* Horizontálisan középre igazítás */
+        align-items: center; /* Vertikálisan középre igazítás */
+      }
     
     .fruitCake {
         max-width: 80%; /* Adjust width to fit the screen */
         height: auto;
-        top: 90%;
+        top: 80%;
     }
 
     .centeredTextTitle {
