--- a/src/Components/PhotoGallery/CategorySection.module.css
+++ b/src/Components/PhotoGallery/CategorySection.module.css
@@ -73,8 +73,8 @@
     display: none;
   }
   .text{
-    font-size: 1.6rem !important;
-    margin: 40px 20px 40px 20px;
+    font-size: 1.4rem !important;
+    margin: 30px 20px 20px 20px;
     text-align: center !important;
     line-height: 1.6;
     font-family: 'Sorts Mill Goudy', serif;
@@ -88,13 +88,22 @@
     flex: 2;
     background-image: url('../../Assets/CakesPicture/splashbackgroundMobile.png');
     background-position: center center;
-    background-size: 100%;
+    background-size: 80%;
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
+    height: 40vh;
+    overflow: visible !important;
   }
+  .image {
+    max-width: 100%;
+    max-height: 90%;
+    object-fit: cover;
+    border-radius: 0 0px 0px 0px;
+  }
+
+  .splash{}
 }
 
 /* Kicsi készülékek (tabletek, 576px és 767px között) */
